--- a/app.html
+++ b/app.html
@@ -6,15 +6,25 @@
 </head>   
 <body>
     <div>
-    <h1>Hello World! </h1>
+    <h1>Find your Horoscope!</h1>
     </div>
  
- <form action="">
-    <h2><label>When is your birthday?</label></h2>
-    <input type="date" name="birthday" placeholder="Choose your birthday.">
-    <input type="submit" name="submit" value="Submit">
- </form>
+ <form action=" ">
+    <h2><label>Enter your birthday to find your Horoscope!</label></h2>
 
+    <input type = "date" id = "bday" name = "bday" onchange = "bdayConverter();">
+
+ </form>
+<br>
+<br>
+<br>
+
+<div id="output">
+
+
+</div>
+
+ <script src = "scripts.js"></script>
 
 </body>
 </html>
