added features of CSS

--- a/app.html
+++ b/app.html
@@ -7,24 +7,24 @@
 </head>   
 <body>
     <div>
-    <h1>Find your Horoscope!</h1>
+    <h1 id="title">Find your Horoscope!</h1>
     </div>
- 
- <form action=" ">
-    <h2><label>Enter your birthday to find your Horoscope!</label></h2>
+ <div class="box">
+    <form action=" ">
+        <h2><label>Enter your birthday to find your Horoscope!</label></h2>
 
-    <input type = "date" id = "bday" name = "bday" onchange = "bdayConverter();">
+        <input type = "date" id = "bday" name = "bday" onchange = "bdayConverter();">
 
- </form>
-<br>
-<br>
-<br>
+    </form>
+    <br>
+    <br>
+    <br>
 
-<div id="output">
+    <div id="output">
 
 
+    </div>
 </div>
-
  <script src = "scripts.js"></script>
 
 </body>
