Changed title name

--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hello World!</title>
+    <title>Horoscope Finder</title>
     <link rel="stylesheet" href="horoscope.css">
 </head>   
 <body>
