added icon for tab in browser

--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Horoscope Finder</title>
+    <link rel="icon" href="icon.jpg">
     <link rel="stylesheet" href="horoscope.css">
 </head>   
 <body>
@@ -24,6 +25,7 @@
 
 
     </div>
+    
 </div>
  <script src = "scripts.js"></script>
 
