--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
 </head>   
 <body>
     <div>
-    <h1 id="title">Find your Horoscope!</h1>
+    <h1 id="title">Find Your Horoscope!</h1>
     </div>
  <div class="box">
     <form action=" ">
